[package]
name = "certs"
version = "0.1.0-alpha1"
edition = "2021"
description = "CLI tool to debug server's SSL/TLS Certificates"
keywords = ["certs", "x509", "cli", "debug"]
license = "MIT"
readme = "README.md"
categories = ["web-programming"]

[lib]
name = "libcerts"
path = "src/lib.rs"

[[bin]]
name = "certs"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
color-eyre = "0.6.2"
native-tls = "0.2.11"
thiserror = "1.0.40"
url = "2.3.1"
x509-parser = "0.15.0"
